--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,14 @@
             <artifactId>azure-identity</artifactId>
             <version>1.13.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-ai-contentsafety</artifactId>
+            <version>1.0.16</version>
+        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
