--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@ spring.application.name=kids_chat
 
 azure.open.ai.endpoint=${OPEN.AI.ENDPOINT}
 azure.open.ai.key=${OPEN.AI.KEY}
+
 azure.content.safety.endpoint=${AZURE_CONTENT_SAFETY_ENDPOINT}
 azure.content.safety.api.key=${AZURE_CONTENT_SAFETY_APIKEY}
+
+azure.bullying.endpoint = ${AZURE_BULLYING_ENDPOINT}
+azure.bullying.api.key =${AZURE_BULLYING_APIKEY}
