Add check for ResponseMode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=kids_chat
 
-azure.open.ai.endpoint=${OPEN.AI.ENDPOINT}
-azure.open.ai.key=${OPEN.AI.KEY}
-
+azure.open.ai.endpoint=${OPEN_AI_ENDPOINT}
+azure.open.ai.key=${OPEN_AI_KEY}
 azure.content.safety.endpoint=${AZURE_CONTENT_SAFETY_ENDPOINT}
 azure.content.safety.api.key=${AZURE_CONTENT_SAFETY_APIKEY}
-
 azure.bullying.endpoint = ${AZURE_BULLYING_ENDPOINT}
 azure.bullying.api.key =${AZURE_BULLYING_APIKEY}
