--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,13 @@
             <artifactId>azure-ai-contentsafety</artifactId>
             <version>1.0.16</version>
         </dependency>
-
+        <!-- Source: https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version> 2.20.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
