--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=kids_chat
-
-azure.open.ai.endpoint=${OPEN_AI_ENDPOINT}
-azure.open.ai.key=${OPEN_AI_KEY}
-azure.content.safety.endpoint=${AZURE_CONTENT_SAFETY_ENDPOINT}
-azure.content.safety.api.key=${AZURE_CONTENT_SAFETY_APIKEY}
-azure.bullying.endpoint = ${AZURE_BULLYING_ENDPOINT}
-azure.bullying.api.key =${AZURE_BULLYING_APIKEY}
+#spring.application.name=kids_chat
+#
+#azure.open.ai.endpoint=${OPEN_AI_ENDPOINT}
+#azure.open.ai.key=${OPEN_AI_KEY}
+#azure.content.safety.endpoint=${AZURE_CONTENT_SAFETY_ENDPOINT}
+#azure.content.safety.api.key=${AZURE_CONTENT_SAFETY_APIKEY}
+#azure.bullying.endpoint = ${AZURE_BULLYING_ENDPOINT}
+#azure.bullying.api.key =${AZURE_BULLYING_APIKEY}
+#ai.answer-mode = GPT_ONLY
